k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dpyl
  namespace: chatapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mannanrawat/chatapp-backend:latest
        ports:
        - containerPort: 5001
