k8s/mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-dpyl
  namespace: chatapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb-dpyl
  template:
    metadata:
      labels:
        app: mongodb-dpyl
    spec:
      containers:
      - name: mongodb-dpyl
        image: mongo:latest
        ports:
        - containerPort: 27017
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
